--- a/WireGuardCommand/Components/Tooltip.razor.css
+++ b/WireGuardCommand/Components/Tooltip.razor.css
@@ -2,8 +2,13 @@
     width: 1rem;
     height: 1rem;
 
+    min-width: 1rem;
+    min-height: 1rem;
+
     background-image: url('/images/info.png');
     background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 
     cursor: help;
 }
@@ -23,9 +28,16 @@
 
     width: 100%;
     height: 100%;
+
+    backdrop-filter: blur(5px);
 }
 
 .tooltip-content {
+    display: flex;
+    flex-direction: column;
+
+    gap: 1rem;
+
     position: relative;
 
     border: 1px solid #404040;
