--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -155,6 +155,30 @@
                         </div>
                     </fieldset>
                 }
+                else if(CurrentTab == ProjectViewTab.Preview)
+                {
+                    @if(PreviewConfigs is null)
+                    {
+                        <div style="display: flex; gap: 0.5rem">
+                            <div>No configuration generated.</div>
+                            <button class="btn-primary" @onclick="GeneratePreviewAsync">Generate</button>
+                        </div>
+                    }
+                    else
+                    {
+                        <button class="btn-primary" @onclick="GeneratePreviewAsync">Regenerate</button>
+
+                        <div style="display: flex; flex-direction: column; gap: 1rem">
+                            @foreach(var config in PreviewConfigs)
+                            {
+                                <div style="display: flex; flex-direction: column;">
+                                    <div>@config.Key</div>
+                                    <textarea rows="8">@config.Value</textarea>
+                                </div>
+                            }
+                        </div>
+                    }
+                }
                 else if(CurrentTab == ProjectViewTab.Export)
                 {
                     <fieldset class="field-group">
