--- a/WireGuardCommand/Pages/_Layout.cshtml
+++ b/WireGuardCommand/Pages/_Layout.cshtml
@@ -8,8 +8,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="/css/site.css" rel="stylesheet" />
     <link href="WireGuardCommand.styles.css" rel="stylesheet" />
+    <link href="/lib/highlightjs/styles/wgc.css" rel="stylesheet"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -19,5 +20,6 @@
     <script>process = undefined;</script>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="/lib/highlightjs/highlight.min.js"></script>
 </body>
 </html>
