--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -42,7 +42,7 @@
             <div style="display: flex; flex-direction: row; gap: 0.5rem">
                 @foreach (ProjectViewTab tab in Enum.GetValues(typeof(ProjectViewTab)))
                 {
-                    <button @onclick="() => CurrentTab = tab" class="tab-button @(CurrentTab == tab ? "active" : "")">@tab.ToString()</button>
+                    <button @onclick="async () => { await UpdateTabAsync(tab); }" class="tab-button @(CurrentTab == tab ? "active" : "")">@tab.ToString()</button>
                 }
             </div>
 
@@ -158,27 +158,15 @@
                 }
                 else if(CurrentTab == ProjectViewTab.Preview)
                 {
-                    @if(PreviewConfigs is null)
-                    {
-                        <div style="display: flex; gap: 0.5rem">
-                            <div>No configuration generated.</div>
-                            <button class="btn-primary" @onclick="GeneratePreviewAsync">Generate</button>
-                        </div>
-                    }
-                    else
-                    {
-                        <button class="btn-primary" @onclick="GeneratePreviewAsync">Regenerate</button>
-
-                        <div style="display: flex; flex-direction: column; gap: 1rem">
-                            @foreach(var config in PreviewConfigs)
-                            {
-                                <div style="display: flex; flex-direction: column;">
-                                    <div style="font-size: 1.25rem; font-weight: bold">@config.Key</div>
-                                    <CodeHighlighter Code="@config.Value" Language="language-ini" />
-                                </div>
-                            }
-                        </div>
-                    }
+                    <div style="display: flex; flex-direction: column; gap: 1rem">
+                        @foreach (var config in PreviewConfigs)
+                        {
+                            <div style="display: flex; flex-direction: column;">
+                                <div style="font-size: 1.25rem; font-weight: bold">@config.Key</div>
+                                <CodeHighlighter Code="@config.Value" Language="language-ini" />
+                            </div>
+                        }
+                    </div>
                 }
                 else if(CurrentTab == ProjectViewTab.Export)
                 {
