Added clipboard copy.

--- a/WireGuardCommand/Components/CodeHighlighter.razor
+++ b/WireGuardCommand/Components/CodeHighlighter.razor
@@ -1,5 +1,10 @@
-﻿<pre>
-    <code class="@Language">
-        @Code
-    </code>
-</pre>
+﻿<div class="code">
+    <pre>
+        <code class="@Language">
+            @Code
+        </code>
+    </pre>
+    <div class="clipboard" @onclick="CopyToClipboardAsync">
+        <img src="/images/clipboard.png" width="20" height="20" />
+    </div>
+</div>
