Added save action to preview pane for each peer to save configs individually.

--- a/WireGuardCommand/Components/CodeHighlighter.razor
+++ b/WireGuardCommand/Components/CodeHighlighter.razor
@@ -7,6 +7,9 @@
         </code>
     </pre>
     <div class="actions">
+        <div class="save" @onclick="SaveConfigAsync">
+            <img src="/images/save.png" width="20" height="20" />
+        </div>
         <div class="qrcode" @onclick="() => QRCodeDialog.Show()">
             <img src="/images/qrcode.png" width="20" height="20" />
         </div>
