--- a/WireGuardCommand/Pages/_Layout.cshtml
+++ b/WireGuardCommand/Pages/_Layout.cshtml
@@ -8,9 +8,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+
     <link href="/css/site.css" rel="stylesheet" />
     <link href="WireGuardCommand.styles.css" rel="stylesheet" />
     <link href="/lib/highlightjs/styles/wgc.css" rel="stylesheet"/>
+
+    <script type="text/javascript" src="/lib/site.js"></script>
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
