--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -35,6 +35,7 @@
                     <ToolbarMenuItem Title="Open Folder" OnClick="BrowseProject"></ToolbarMenuItem>
                 }
 
+                <ToolbarMenuItem Title="Save as Template" OnClick="SaveAsTemplateAsync"></ToolbarMenuItem>
                 <ToolbarMenuItem Title="Save Project" OnClick="SaveChangesAsync"></ToolbarMenuItem>
                 <ToolbarMenuItem Title="Close Project" OnClick="CloseProject"></ToolbarMenuItem>
             </ToolbarMenu>
