Added alert controller to push alerts from anywhere in the app.

--- a/WireGuardCommand/Pages/Index.razor
+++ b/WireGuardCommand/Pages/Index.razor
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <Alert Type="AlertType.Error" Content="@Error" OnDismiss="() => { Error = string.Empty; }"/>
+    <Alert />
     <Dialog Title="@DialogTitle" Content="@DialogContent" Type="DialogType.YesNo" ClickYes="DialogYes" @ref="Dialog"/>
 
     <div class="project-list" @onclick="() => { SelectedProject = null; }">
